--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portfolio Website designing -K2inofocom</title>
-    <!---external css ---->
+    <title>Po nika</title>
+   
     <link rel="stylesheet" href="style.css">
-    <!---font awesome cdn for font icons---->
+   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
+     <link rel="icon" href="images\NikaImage.jpg"/>
 </head>
 <body>
    <div class="container">
@@ -20,12 +21,12 @@
             <div class="profile-details">
                  <div class="intro">
                     <h2>Po Nika</h2>
-                    <h4>Skincare Consultant</h4>
+                    <h4>Skincare Consultant & Content Writer</h4>
                     <div class="social">
                         <a href="https://www.facebook.com/share/Vo6gWWerWLRvXN3w/?mibextid=LQQJ4d"><i class="fab fa-facebook" style="color:var(--blue)"></i></a>
                         <a href="https://t.me/ka_Sure"><i class="fab fa-telegram"  style="color:var(--skyblue)"></i></a>
                         <a href="https://www.tiktok.com/@jennicaskin"><i class="fab fa-tiktok"  style="color:var(--dark-pink)"></i></a>
-                        <a href="#"><i class="fab fa-linkedin"  style="color:var(--light-blue)"></i></a>
+                        <!-- <a href="#"><i class="fab fa-linkedin"  style="color:var(--light-blue)"></i></a> -->
                     </div>
                  </div>
 
@@ -46,7 +47,7 @@
                         </div>
                         <div class="content">
                            <span>Email</span>
-                           <h5>nikapo213@gmail.com</h5>
+                           <h5><portal></portal>ponika5165@gmail.com</h5>
                         </div>
                    </div>
                    
@@ -62,7 +63,7 @@
                  </div>
 
             </div>
-               <a href="CV\PoNika.pdf"   download class="download-btn" >
+               <a href="CV\PONIKA_CV.pdf"   download class="download-btn" >
                   <i class="fa fa-download"></i> Download CV
                </a>
             </div>
@@ -72,9 +73,11 @@
        <div class="about">
            <h1>About Me</h1>
 
-           <p> I am a third-year student at ACLEDA UNIVERSITY OF BUSINESS, majoring in Fintech, with three years of experience as a customer, 
-            specializing in solving customer skincare concerns. My experience has equipped me with strong problem-solving, communication,
-             and customer service skills, allowing me to provide personalized skincare recommendations and ensure customer satisfaction.
+           <p> I’m a third-year Fintech student at ACLEDA University of Business with three years of experience as a skincare consultant.
+              My background has equipped me with strong communication, problem-solving, and customer service skills. 
+              Combined with my abilities in content writing and video production, I create engaging skincare content that educates and connects with audiences. 
+              I’m passionate about helping others achieve healthy skin and excited to contribute creative value to your team as a Content Creator.
+
           </p>
 
           
@@ -92,11 +95,11 @@
 
              <div class="workbox">
                 <div class="icon">
-                   <img style="width: 60px;" src="images\cashier-payment-ecommerce-svgrepo-com.svg" alt="">
+                   <img style="width: 60px;" src="images\ContentWriter.svg" alt="">
                 </div>
                 <div class="desc">
-                   <h3>Cashier</h3>
-                   <p>I have experience in handling cash transactions, ensuring accurate and efficient processing while providing excellent customer service.</p>
+                   <h3>Content Writer</h3>
+                   <p>I have experience in content writing, creating engaging and informative skincare content that reflects real customer needs and product knowledge.</p>
                 </div>
             </div>
 
